--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
                     After this you can add a <code>show-if</code> attribute to 
                     any element with the following syntax:
                     <div class='snippet'>
-                        <code>[element_to_check]=[value_to_check]</code>
+                        <code>show-if="[element_to_check]=[value_to_check]"</code>
                     </div>
                     Where <code>element_to_check</code> is the ID of the element
-                    whose value should be checked, and <code>value_to_check</code>
+                    whose value will be checked, and <code>value_to_check</code>
                     being the value to check for. Whenever the element's value changes
                     to the specified value, the element with the <code>show-if</code>
                     attribute will be shown. Otherwise it will be hidden.
                     If <code>element_to_check</code> is a checkbox, then you can omit
-                    the 'equals' sign and anything after it.
+                    the '=' sign and anything after it.
                 </p>
             </section>
         </main>
