--- a/examples/example1.html
+++ b/examples/example1.html
@@ -8,7 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        
+        <header>
+            <a href='../index.html'>Back</a>
+        </header>
         <div class='container'>
             <form id='form'>
                 <div class='field'>
