--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
                     the '=' sign and anything after it.
                 </p>
             </section>
+            <section>
+                <h2>Notes</h2>
+                <ul>
+                    <li>
+                        If an input has a <code>required</code> attribute, it will only show validation
+                        error if the input is visible, otherwise the <code>required</code>
+                        will be removed as long as the field is hidden, and added back
+                        once shown.
+                    </li>
+                </ul>
+            </section>
         </main>
     </body>
 </html>
