update folder structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel='stylesheet' href='./style.css' />
+        <link rel='stylesheet' href='./examples/style.css' />
         <meta name='viewport' content='width=device-width, initial-scale=1' />
     </head>
     <body>
@@ -16,10 +16,10 @@
                 <h2>Examples</h2>
                 <ul>
                     <li>
-                        <a href='./example1.html'>With default settings</a>
+                        <a href='./docs/example1.html'>With default settings</a>
                     </li>
                     <li>
-                        <a href='./example2.html'>With custom animations</a>
+                        <a href='./docs/example2.html'>With custom animations</a>
                     </li>
                 </ul>
             </section>
