--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel='stylesheet' href='./examples/style.css' />
+        <link rel='stylesheet' href='./docs/style.css' />
         <meta name='viewport' content='width=device-width, initial-scale=1' />
     </head>
     <body>
